--- a/artists.html
+++ b/artists.html
@@ -17,9 +17,10 @@ body{
 
 header{
     display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-column: 1;
     grid-row: 1;
-    background-color:gray;
+    background: rgb(73, 73, 73);
     text-align: center;
     font-size : 50px;
     font-family: cursive;
@@ -27,6 +28,13 @@ header{
     width:100%;
     height:80px;
     text-decoration: underline;
+}
+
+header .logo {
+    grid-column: 1;
+    align-items: left;
+    max-height: 70px;
+    margin: 5px;
 }
 
 .content {
@@ -75,19 +83,27 @@ header{
 }
 
 footer{
-    background-color:gray;
+    background: rgb(73, 73, 73);
     text-align: center;
     clear: both;
     position: relative;
     height: 40px;
 }
 
+header a {
+    text-align: left;
+}
+
+
 </style>
 </head>
 <body>
 
 <header>
-     {{.Name}}
+    <a href="/groupie-tracker">
+    <img class="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+    </a>
+    {{.Name}}
 </header>
 <div class="content">
     <div class="leftbox">
