--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body class="accueil">
     <header class="accueil">
+        <a href=#>
         <img class="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+        </a>
         <form class="btn_filter">
         <!-- <button class="filter">Filters</button> -->
         </form>
@@ -25,5 +27,8 @@
         </a>
     {{end}}
 </div>
+<footer>        
+    <p>Copyright &copy;  Groupie Tracker 2020-2021</p>
+</footer>
 </body>
 </html>
