--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>groupie tracker</title>
+    <title>Groupie tracker</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
 </head>
 
 <body class="accueil">
     <header class="accueil">
-        <a href=#>
+        <a href="#">
         <img class="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
         </a>
         <form class="btn_filter">
@@ -21,8 +22,8 @@
     {{range .}}
         <a href="/groupie-tracker/{{.Id}}">
             <div class="cardArtist" id="{{.Id}}">
-                <h2 class="accueil">{{.Name}}</h2>
-                <img class="accueil" src="{{.Image}}">
+                <h2>{{.Name}}</h2>
+                <img src="{{.Image}}">
             </div>
         </a>
     {{end}}
