--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         <a href="#">
         <img class="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
         </a>
-        <form class="btn_filter">
-        <!-- <button class="filter">Filters</button> -->
-        </form>
-        <input class="searchbar"type="text" placeholder="ecrire ici pour faire la rechereches">
+        <button id="filter">Filters</button>
+        <input class="searchbar"type="text" placeholder="Rechercher">
     </header>
+<div id="filterPage">
+<!-- div pour la page des filtres-->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id sed facere quo quasi accusamus ipsa veniam repellat, dolor eius temporibus asperiores enim fugiat praesentium nostrum pariatur! At, itaque vitae.</p>
+</div>
 <div class="artistcliquable">
     {{range .}}
         <a href="/groupie-tracker/{{.Id}}">
@@ -32,4 +34,13 @@
     <p>Copyright &copy;  Groupie Tracker 2020-2021</p>
 </footer>
 </body>
+<!-- 
+<script>
+    var bouton = document.querySelector("#filter");
+    bouton.addEventListener("click", openFilter);
+    function openFilter() {
+        document.querySelector("#filterPage").style.display = none;
+    }
+</script> -->
+
 </html>
