--- a/index.html
+++ b/index.html
@@ -9,38 +9,85 @@
 </head>
 
 <body class="accueil">
+
     <header class="accueil">
         <a href="#">
-        <img class="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+            <img class="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
         </a>
+        <!-- <img id="filterImg" src="https://cdn.discordapp.com/attachments/785416497538269194/816030682073399356/file-svg-filter-icon-11562874693tj59mpz35p.png"> -->
         <button id="filter">Filters</button>
         <input class="searchbar"type="text" placeholder="Rechercher">
     </header>
-<div id="filterPage">
-<!-- div pour la page des filtres-->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id sed facere quo quasi accusamus ipsa veniam repellat, dolor eius temporibus asperiores enim fugiat praesentium nostrum pariatur! At, itaque vitae.</p>
-</div>
-<div class="artistcliquable">
-    {{range .}}
-        <a href="/groupie-tracker/{{.Id}}">
-            <div class="cardArtist" id="{{.Id}}">
-                <h2>{{.Name}}</h2>
-                <img src="{{.Image}}">
-            </div>
-        </a>
-    {{end}}
-</div>
-<footer>        
-    <p>Copyright &copy;  Groupie Tracker 2020-2021</p>
-</footer>
+
+    <div id="artistAndFilter">
+        <div id="filterPage">
+            <p>membres</p>
+            <input type="range" value="1" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
+            <output>1</output>
+            <input type="range" value="7" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
+            <output>7</output>
+            <p>date de création</p>
+            <input type="range" value="1962" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
+            <output>1962</output>
+            <input type="range" value="2013" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
+            <output>2013</output>
+            <p>date de premier album</p>
+            <input type="range" value="1963" min="1963" max="2018" oninput="this.nextElementSibling.value = this.value">
+            <output>1963</output>
+            <input type="range" value="2018" min="1963" max="2018" oninput="this.nextElementSibling.value = this.value">
+            <output>2018</output>
+            <p>localisations</p>
+            <ul>
+                <li>
+
+                </li>
+                <li><input type="checkbox" name="USA"><label>USA</label></li>
+                <li><input type="checkbox" name="japon"><label>japon</label></li>
+                <li><input type="checkbox" name="nouvelle zélande"><label>nouvelle zélande</label></li>
+                <li><input type="checkbox" name="mexique"><label>mexique</label></li>
+                <li><input type="checkbox" name="polynésie"><label>polynésie</label></li>
+                <li><input type="checkbox" name="nouvelle calédonie"><label>nouvelle calédonie</label></li>
+                <li><input type="checkbox" name="angleterre"><label>angleterre</label></li>
+                <li><input type="checkbox" name="suisse"><label>suisse</label></li>
+                <li><input type="checkbox" name="france"><label>france</label></li>
+                <li><input type="checkbox" name="australie"><label>australie</label></li>
+                <li><input type="checkbox" name="indonésie"><label>indonésie</label></li>
+                <li><input type="checkbox" name="slovaquie"><label>slovaquie</label></li>
+                <li><input type="checkbox" name="hongrie"><label>hongrie</label></li>
+                <li><input type="checkbox" name="indonésie"><label>indonésie</label></li>
+            </ul>
+
+        </div>
+
+        <div id="artistcliquable">
+            {{range .}}
+                <a href="/groupie-tracker/{{.Id}}">
+                    <div class="cardArtist" id="{{.Id}}">
+                        <h2>{{.Name}}</h2>
+                        <img src="{{.Image}}">
+                    </div>
+                </a>
+            {{end}}
+        </div>
+    </div>
+
+    <footer>        
+        <p>Copyright &copy;  Groupie Tracker 2020-2021</p>
+    </footer>
+    
 </body>
-<!-- 
+
 <script>
     var bouton = document.querySelector("#filter");
+    var divFilter = document.querySelector("#filterPage");
     bouton.addEventListener("click", openFilter);
     function openFilter() {
-        document.querySelector("#filterPage").style.display = none;
+        if (divFilter.style.display == "block") {
+            divFilter.style.display = "none"
+        } else {
+            divFilter.style.display = "block"
+        }
     }
-</script> -->
+</script>
 
 </html>
