--- a/index.html
+++ b/index.html
@@ -21,22 +21,39 @@
 
     <div id="artistAndFilter">
         <div id="filterPage">
-            <p>membres</p>
-            <input type="range" value="1" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
-            <output>1</output>
-            <input type="range" value="7" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
-            <output>7</output>
-            <p>date de création</p>
-            <input type="range" value="1962" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
-            <output>1962</output>
-            <input type="range" value="2013" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
-            <output>2013</output>
-            <p>date de premier album</p>
-            <input type="range" value="1963" min="1963" max="2018" oninput="this.nextElementSibling.value = this.value">
-            <output>1963</output>
-            <input type="range" value="2018" min="1963" max="2018" oninput="this.nextElementSibling.value = this.value">
-            <output>2018</output>
-            <p>localisations</p>
+            <div id="filterPage2">
+                <p>membres</p>
+                <div class="col1">
+                    <input type="range" value="1" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
+                    <output>1</output>
+                </div>
+                <div class="col2">
+                    <input type="range" value="7" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
+                    <output>7</output>
+                </div>
+                <p>date de création</p>
+                <div class="col1">
+                    <input type="range" value="1962" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
+                    <output>1962</output>
+                </div>
+                <div class="col2">
+                    <input type="range" value="2013" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
+                    <output>2013</output>
+                </div>       
+
+                <p>date de premier album</p>
+                <div class="col1">
+                    <input type="range" value="1963" min="1963" max="2018" oninput="this.nextElementSibling.value = this.value">
+                    <output>1963</output>
+                </div>
+                <div class="col2">
+                    <input type="range" value="2018" min="1963" max="2018" oninput="this.nextElementSibling.value = this.value">
+                    <output>2018</output>
+                </div>
+            </div>
+        
+
+            <!-- <p>localisations</p>
             <ul>
                 <li>
 
@@ -55,7 +72,7 @@
                 <li><input type="checkbox" name="slovaquie"><label>slovaquie</label></li>
                 <li><input type="checkbox" name="hongrie"><label>hongrie</label></li>
                 <li><input type="checkbox" name="indonésie"><label>indonésie</label></li>
-            </ul>
+            </ul> -->
 
         </div>
 
@@ -79,13 +96,13 @@
 
 <script>
     var bouton = document.querySelector("#filter");
-    var divFilter = document.querySelector("#filterPage");
+    var divFilter = document.querySelector("#filterPage2");
     bouton.addEventListener("click", openFilter);
     function openFilter() {
-        if (divFilter.style.display == "block") {
+        if (divFilter.style.display == "grid") {
             divFilter.style.display = "none"
         } else {
-            divFilter.style.display = "block"
+            divFilter.style.display = "grid"
         }
     }
 </script>
