ajout logo filtres

--- a/artists.html
+++ b/artists.html
@@ -9,11 +9,12 @@
     <link rel="icon" href="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
 </head>
 <body>
-
 <header>
-    <a href="/groupie-tracker">
-    <img class="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
-    </a>
+    <div id="divLogo">
+        <a href="/groupie-tracker">
+            <img id="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+        </a>
+    </div>
     {{.Name}}
 </header>
 <div class="content">
