--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body class="accueil">
-
     <header class="accueil">
-        <a href="#">
-            <img class="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
-        </a>
-        <!-- <img id="filterImg" src="https://cdn.discordapp.com/attachments/785416497538269194/816030682073399356/file-svg-filter-icon-11562874693tj59mpz35p.png"> -->
-        <button id="filter">Filters</button>
+        <div id="divLogo">
+            <a href="#">
+                <img id="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+            </a>
+            <img id="filter" src="https://cdn.discordapp.com/attachments/785416497538269194/816304952925618207/filter.png">
+        </div>
         <input class="searchbar"type="text" placeholder="Rechercher">
     </header>
 
@@ -96,13 +96,13 @@
 
 <script>
     var bouton = document.querySelector("#filter");
-    var divFilter = document.querySelector("#filterPage2");
+    var divFilter = document.querySelector("#filterPage");
     bouton.addEventListener("click", openFilter);
     function openFilter() {
-        if (divFilter.style.display == "grid") {
+        if (divFilter.style.display == "inline") {
             divFilter.style.display = "none"
         } else {
-            divFilter.style.display = "grid"
+            divFilter.style.display = "inline"
         }
     }
 </script>
