--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
         <div id="filterPage">
             <div id="filterPage2">
                 <p>membres</p>
-                <div class="col1">
                 <form method="POST">
-                    <input name="test" type="range" value="1" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
-                    <output>1</output>
+                    <div class="col1">
+                        <!-- <input name="minMembers" type="number" value="1" min="1" max="7"> -->
+                        <input name="minMembers" type="range" value="1" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
+                        <output>1</output>
+                    </div>
+                    <div class="col2">
+                        <input name="maxMembers" type="range" value="7" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
+                        <output>7</output>
+                    </div>
                     <input type="submit">
                 </form>
-                </div>
-                <div class="col2">
-                    <input type="range" value="7" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
-                    <output>7</output>
-                </div>
-                <p>date de création</p>
+                <!-- <p>date de création</p>
                 <div class="col1">
                     <input type="range" value="1962" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
                     <output>1962</output>
@@ -51,7 +52,7 @@
                 <div class="col2">
                     <input type="range" value="2018" min="1963" max="2018" oninput="this.nextElementSibling.value = this.value">
                     <output>2018</output>
-                </div>
+                </div> -->
             </div>
         </div>
         <div id="artistcliquable">
