--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="filterPage">
             <div id="filterPage2">
                 <p>membres</p>
-                <form method="POST">
+                <form method="GET">
                     <div class="col1">
                         <!-- <input name="minMembers" type="number" value="1" min="1" max="7"> -->
                         <input name="minMembers" type="range" value="1" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
