--- a/index.html
+++ b/index.html
@@ -9,66 +9,68 @@
 </head>
 
 <body class="accueil">
-
     <header class="accueil">
-        <a href="#">
-            <img class="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
-        </a>
-        <!-- <img id="filterImg" src="https://cdn.discordapp.com/attachments/785416497538269194/816030682073399356/file-svg-filter-icon-11562874693tj59mpz35p.png"> -->
-        <button id="filter">Filters</button>
+        <div id="divLogo">
+            <a href="/groupie-tracker">
+                <img id="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+            </a>
+            <img id="filter" src="https://cdn.discordapp.com/attachments/785416497538269194/816304952925618207/filter.png">
+        </div>
         <input class="searchbar"type="text" placeholder="Rechercher">
     </header>
 
     <div id="artistAndFilter">
         <div id="filterPage">
-            <p>membres</p>
-            <input type="range" value="1" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
-            <output>1</output>
-            <input type="range" value="7" min="1" max="7" oninput="this.nextElementSibling.value = this.value">
-            <output>7</output>
-            <p>date de création</p>
-            <input type="range" value="1962" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
-            <output>1962</output>
-            <input type="range" value="2013" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
-            <output>2013</output>
-            <p>date de premier album</p>
-            <input type="range" value="1963" min="1963" max="2018" oninput="this.nextElementSibling.value = this.value">
-            <output>1963</output>
-            <input type="range" value="2018" min="1963" max="2018" oninput="this.nextElementSibling.value = this.value">
-            <output>2018</output>
-            <p>localisations</p>
-            <ul>
-                <li>
-
-                </li>
-                <li><input type="checkbox" name="USA"><label>USA</label></li>
-                <li><input type="checkbox" name="japon"><label>japon</label></li>
-                <li><input type="checkbox" name="nouvelle zélande"><label>nouvelle zélande</label></li>
-                <li><input type="checkbox" name="mexique"><label>mexique</label></li>
-                <li><input type="checkbox" name="polynésie"><label>polynésie</label></li>
-                <li><input type="checkbox" name="nouvelle calédonie"><label>nouvelle calédonie</label></li>
-                <li><input type="checkbox" name="angleterre"><label>angleterre</label></li>
-                <li><input type="checkbox" name="suisse"><label>suisse</label></li>
-                <li><input type="checkbox" name="france"><label>france</label></li>
-                <li><input type="checkbox" name="australie"><label>australie</label></li>
-                <li><input type="checkbox" name="indonésie"><label>indonésie</label></li>
-                <li><input type="checkbox" name="slovaquie"><label>slovaquie</label></li>
-                <li><input type="checkbox" name="hongrie"><label>hongrie</label></li>
-                <li><input type="checkbox" name="indonésie"><label>indonésie</label></li>
-            </ul>
-
+            <div id="filterPage2">
+                <p>membres</p>
+                <form method="GET">
+                    <div class="col1">
+                        <input type="checkbox" label="1" name="OneMember"> <label>1</label>
+                        <input type="checkbox" label="2" name="TwoMember">  <label>2</label>
+                        <input type="checkbox" label="3" name="ThreeMember"> <label>3</label>
+                        <input type="checkbox" label="4" name="FourMember"> <label>4</label>
+                        <input type="checkbox" label="5" name="FiveMember" > <label>5</label>
+                        <input type="checkbox" label="6" name="SixMember">  <label>6</label>
+                        <input type="checkbox" label="7" name="SevenMember"> <label>7</label>
+                    </div>
+                    <input type="submit">
+                </form>
+                <!-- <p>date de création</p>
+                <div class="col1">
+                    <input type="range" value="1962" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
+                    <output>1962</output>
+                </div>
+                <div class="col2">
+                    <input type="range" value="2013" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
+                    <output>2013</output>
+                </div>       
+                <p>date de premier album</p>
+                <div class="col1">
+                    <input type="range" value="1963" min="1963" max="2018" oninput="this.nextElementSibling.value = this.value">
+                    <output>1963</output>
+                </div>
+                <div class="col2">
+                    <input type="range" value="2018" min="1963" max="2018" oninput="this.nextElementSibling.value = this.value">
+                    <output>2018</output>
+                </div> -->
+            </div>
         </div>
-
         <div id="artistcliquable">
-            {{range .}}
+        {{range .}}
                 <a href="/groupie-tracker/{{.Id}}">
                     <div class="cardArtist" id="{{.Id}}">
                         <h2>{{.Name}}</h2>
                         <img src="{{.Image}}">
                     </div>
                 </a>
-            {{end}}
+        {{end}}
         </div>
+    </div>
+
+    <div> 
+        {{range}}
+
+
     </div>
 
     <footer>        
@@ -82,10 +84,10 @@
     var divFilter = document.querySelector("#filterPage");
     bouton.addEventListener("click", openFilter);
     function openFilter() {
-        if (divFilter.style.display == "block") {
+        if (divFilter.style.display == "inline") {
             divFilter.style.display = "none"
         } else {
-            divFilter.style.display = "block"
+            divFilter.style.display = "inline"
         }
     }
 </script>
