--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="artistAndFilter">
         <div id="filterPage">
             <div id="filterPage2">
-                <!-- <p>membres</p>
+                <p>membres</p>
                 <form method="GET">
                     <div class="col1">
                         <input type="checkbox" label="1" name="OneMember"> <label>1</label>
@@ -33,19 +33,16 @@
                         <input type="checkbox" label="6" name="SixMember">  <label>6</label>
                         <input type="checkbox" label="7" name="SevenMember"> <label>7</label>
                     </div>
-                    <input type="submit">
-                </form> -->
-                <form method="GET">
                 <p>date de création</p>
                 <div class="col1">
-                    <input type="range" name="minCrea" value="1962" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
-                    <output>1962</output>
+                    <input type="range" name="minCrea" value="1958" min="1958" max="2015" oninput="this.nextElementSibling.value = this.value">
+                    <output>1958</output>
                 </div>
                 <div class="col2">
-                    <input type="range" name="maxCrea" value="2013" min="1962" max="2013" oninput="this.nextElementSibling.value = this.value">
-                    <output>2013</output>
+                    <input type="range" name="maxCrea" value="2015" min="1958" max="2015" oninput="this.nextElementSibling.value = this.value">
+                    <output>2015</output>
                 </div>
-                <input type="submit">
+                <input name="submit" type="submit">
                 </form>       
                 <!-- <p>date de premier album</p>
                 <div class="col1">
