--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    
 
 <body class="accueil">
     <header class="accueil">
@@ -16,7 +18,14 @@
             </a>
             <img id="filter" src="https://cdn.discordapp.com/attachments/785416497538269194/816304952925618207/filter.png">
         </div>
-        <input class="searchbar"type="text" placeholder="Rechercher">
+        <form method="POST">
+        <form class="example" action="action_page.php">
+          <input type="text" placeholder="Search.." name="search">
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+            <!-- <input type="text" name="search" placeholder="Search..">
+            <i class="fas fa-search"></i> -->
+       </form>
     </header>
 
     <div id="artistAndFilter">
