--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         </div>
         <div id="artistcliquable">
         {{range .}}
-                <a href="/groupie-tracker/{{.Id}}">
-                    <div class="cardArtist" id="{{.Id}}">
+                <a href="/groupie-tracker/{{.ID}}">
+                    <div class="cardArtist" id="{{.ID}}">
                         <h2>{{.Name}}</h2>
                         <img src="{{.Image}}">
                     </div>
