ajout de la searchbar qui marche sauf pr members

--- a/artists.html
+++ b/artists.html
@@ -36,7 +36,7 @@
         </ul>
         <h1>Concerts</h1>
         <ul>
-            {{range $index, $element := .TabRelation.DatesLocations}}
+            {{range $index, $element := .TabRelation}}
                 <li>{{$index}}
                     <ul>
                         {{range $element}}
