--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img id="filter" src="https://cdn.discordapp.com/attachments/785416497538269194/816304952925618207/filter.png">
         </div>
         <form method="POST">
-            <input list="list" id="search" name="search"/>
+            <input list="list" id="search" name="search" placeholder="Rechercher" autocomplete="off"/>
             <datalist id="list">
                 {{range .}}
                     <option value="{{.Name}} -Name">
