--- a/index.html
+++ b/index.html
@@ -45,8 +45,13 @@
                 <p>membres</p>
                 <form method="POST">
                     <div class="col1">
-                        <input name="minMembers" type="number" value="1" min="1" max="7">
-                        <output>1</output>
+                        <input type="checkbox" label="1" name="OneMember"> <label>1</label>
+                        <input type="checkbox" label="2" name="TwoMember">  <label>2</label>
+                        <input type="checkbox" label="3" name="ThreeMember"> <label>3</label>
+                        <input type="checkbox" label="4" name="FourMember"> <label>4</label>
+                        <input type="checkbox" label="5" name="FiveMember" > <label>5</label>
+                        <input type="checkbox" label="6" name="SixMember">  <label>6</label>
+                        <input type="checkbox" label="7" name="SevenMember"> <label>7</label>
                     </div>
                 <p>date de création</p>
                 <div class="col1">
