--- a/artists.html
+++ b/artists.html
@@ -5,14 +5,14 @@
     <title>Groupie Tracker</title>
     <link rel="preconnect" href="https://fonts.gstatic.com/%22%3E">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/style.css">
-    <link rel="icon" href="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+    <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="stylesheet" type="text/css" href="/artist.css">
 </head>
 <body>
 <header>
     <div id="divLogo">
         <a href="/groupie-tracker">
-            <img id="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+            <img id="logo" src="/logo.png">
         </a>
     </div>
     {{.Name}}
