--- a/index.html
+++ b/index.html
@@ -10,16 +10,10 @@
 
     
 
-<body class="accueil">
-    <header class="accueil">
-        <div id="divLogo">
-            <a href="/groupie-tracker">
-                <img id="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
-            </a>
-            <img id="filter" src="https://cdn.discordapp.com/attachments/785416497538269194/816304952925618207/filter.png">
-        </div>
+<body>
+    <div class="container">
+        <input list="list" id="search" name="search" placeholder="Rechercher" autocomplete="off"/> 
         <form method="POST">
-            <input list="list" id="search" name="search" placeholder="Rechercher" autocomplete="off"/>
             <datalist id="list">
                 {{range .}}
                     <option value="{{.Name}} -Name">
@@ -37,6 +31,16 @@
                 {{end}}
             </datalist>
         </form>
+        <div class="search"></div>
+    </div>
+    <header class="accueil">
+        <div id="divLogo">
+            <a href="/groupie-tracker">
+                <img id="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+            </a>
+            <img id="filter" src="https://cdn.discordapp.com/attachments/785416497538269194/816304952925618207/filter.png">
+        </div>
+       
     </header>
 
     <div id="artistAndFilter">
