changement technique bar

--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
             </a>
             <img id="filter" src="filtre.png">
         </div>
-<body>
-    <div class="container">
-        <input list="list" id="search" name="search" placeholder="Rechercher" autocomplete="off"/> 
         <form method="POST">
             <datalist id="list">
                 {{range .}}
@@ -41,6 +38,15 @@
         </form>
         <div class="search"></div>
     </div>
+    <header class="accueil">
+        <div id="divLogo">
+            <a href="/groupie-tracker">
+                <img id="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+            </a>
+            <img id="filter" src="https://cdn.discordapp.com/attachments/785416497538269194/816304952925618207/filter.png">
+        </div>
+       
+    </header>
 
     <div id="artistAndFilter">
         <div id="filterPage">
