--- a/artists.html
+++ b/artists.html
@@ -7,49 +7,52 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/artist.css">
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
 </head>
-<body>
-<header>
-    <div id="divLogo">
-        <a href="/groupie-tracker">
-            <img id="logo" src="/logo.png">
-        </a>
-    </div>
-    {{.Name}}
-</header>
-<div class="content">
-    <div class="leftbox">
-        <img src="{{.Image}}">
 
-        <h1>Date de création</h1>
-        <p class="leftText">{{.CreationDate}}</p>
-        <h1>Date du premier album</h1>
-        <p class="leftText">{{.FirstAlbum}}</p>
-    </div>
+<body>
+    <header>
+        <div id="divLogo">
+            <a href="/groupie-tracker">
+                <img id="logoImage" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+            </a>
+        </div>
+        <h2>{{.Name}}   </h2>
+    </header>
+
+    <div class="content">
+        <div class="leftbox">
+            <img src="{{.Image}}">
+            <h1>Date de création</h1>
+            <p class="leftText">{{.CreationDate}}</p>
+            <h1>Date du premier album</h1>
+            <p class="leftText">{{.FirstAlbum}}</p>
+        </div>
         
-    <div class="rightbox">
-        <h1>Membres</h1> 
-        <ul>
-            {{range .Members}}
+        <div class="rightbox">
+            <h1>Membres</h1> 
+            <ul>
+                {{range .Members}}
                 <li>{{.}}</li>
-            {{end}}
-        </ul>
-        <h1>Concerts</h1>
-        <ul>
-            {{range $index, $element := .TabRelation}}
-                <li>{{$index}}
-                    <ul>
-                        {{range $element}}
-                            <li>{{.}}</li>
-                        {{end}}
-                    </ul>
-                </li>
-            {{end}}
-        </ul>
+                {{end}}
+            </ul>
+            <h1>Concerts</h1>
+            <ul>
+                {{range $index, $element := .TabRelation}}
+                    <li>{{$index}}
+                        <ul>
+                            {{range $element}}
+                                <li>{{.}}</li>
+                            {{end}}
+                        </ul>
+                    </li>
+                {{end}}
+            </ul>
+        </div>
     </div>
-</div>
-<footer>        
-    <p>Copyright &copy;  Groupie Tracker 2020-2021</p>
-</footer>
+
+    <footer>        
+        <p>Copyright &copy;  Groupie Tracker 2020-2021</p>
+    </footer>
 </body>
 </html>
