--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
     
 
-<body class="accueil">
-    <header class="accueil">
+<body>
+    <header>
         <div id="divLogo">
             <a href="/groupie-tracker">
-                <img id="logo" src="logo.png">
+                <img id="logoImage" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
             </a>
-            <img id="filter" src="filtre.png">
+            <img id="filterImage" src="https://cdn.discordapp.com/attachments/785416497538269194/816304952925618207/filter.png">
         </div>
         <form method="POST">
+            <input list="list" id="search" name="search" placeholder="Rechercher" autocomplete="off"/>
             <datalist id="list">
                 {{range .}}
                     <option value="{{.Name}} -Name">
@@ -36,16 +38,6 @@
                 {{end}}
             </datalist>
         </form>
-        <div class="search"></div>
-    </div>
-    <header class="accueil">
-        <div id="divLogo">
-            <a href="/groupie-tracker">
-                <img id="logo" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
-            </a>
-            <img id="filter" src="https://cdn.discordapp.com/attachments/785416497538269194/816304952925618207/filter.png">
-        </div>
-       
     </header>
 
     <div id="artistAndFilter">
@@ -53,7 +45,7 @@
             <div id="filterPage2">
                 <p>membres</p>
                 <form method="POST">
-                    <div class="col1">
+                    <div>
                         <input type="checkbox" label="1" name="OneMember"> <label>1</label>
                         <input type="checkbox" label="2" name="TwoMember">  <label>2</label>
                         <input type="checkbox" label="3" name="ThreeMember"> <label>3</label>
@@ -63,11 +55,11 @@
                         <input type="checkbox" label="7" name="SevenMember"> <label>7</label>
                     </div>
                 <p>date de création</p>
-                <div class="col1">
+                <div>
                     <input type="range" name="minCrea" value="1958" min="1958" max="2015" oninput="this.nextElementSibling.value = this.value">
                     <output>1958</output>
                 </div>
-                <div class="col2">
+                <div>
                     <input type="range" name="maxCrea" value="2015" min="1958" max="2015" oninput="this.nextElementSibling.value = this.value">
                     <output>2015</output>
                 </div>
@@ -76,9 +68,9 @@
             </div>
         </div>
 
-        <div id="artistcliquable">
+        <div id="allCardArtist">
             {{range .}}
-                <a href="/groupie-tracker/{{.ID}}" class="cardArtist">
+                <a href="#" class="cardArtist" id="{{.ID}}">
                     <div class="face face1">
                         <h2>{{.Name}}</h2>
                     </div>
@@ -96,7 +88,7 @@
 </body>
 
 <script>
-    var bouton = document.querySelector("#filter");
+    var bouton = document.querySelector("#filterImage");
     var divFilter = document.querySelector("#filterPage");
     bouton.addEventListener("click", openFilter);
     function openFilter() {
