--- a/artists.html
+++ b/artists.html
@@ -7,17 +7,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/artist.css">
-    <link rel="icon" href="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
 </head>
 
 <body>
     <header>
         <div id="divLogo">
             <a href="/groupie-tracker">
-                <img id="logoImage" src="https://cdn.discordapp.com/attachments/785416497538269194/808653487181004840/logo_note.png">
+                <img id="logoImage" src="/logo.png">
             </a>
         </div>
-        <h2>{{.Name}}   </h2>
+        <h2>{{.Name}}</h2>
     </header>
 
     <div class="content">
