--- a/artists.html
+++ b/artists.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/artist.css">
+    <link rel="stylesheet" type="text/css" href="/header.css">
 </head>
 
 <body>
