new background, new header, favicon

--- a/artists.html
+++ b/artists.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Groupie Tracker</title>
+    <title>{{.Name}}</title>
     <link rel="preconnect" href="https://fonts.gstatic.com/%22%3E">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/artists.css">
     <link rel="stylesheet" type="text/css" href="/header.css">
     <link rel="stylesheet" type="text/css" href="/footer.css">
+    <link rel="icon" type="image/png" href="/favicon.png" />
 </head>
 <body>
     <header>
