--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/logo.png"/>
 </head>
     
 <body>
@@ -20,9 +20,9 @@
             </a>
             <img id="filterImage" src="filtre.png">
             <a href="/groupie-tracker/contact.html">
-                <button>Contactez-nous</button>
+                <img id="mailImage" src="mail.png">
             </a>
-        </div>  
+        </div>
         <form method="POST" id="formSearchBar">
             <input list="list" id="searchInput" type="text" name="search" placeholder="Rechercher" autocomplete="off"/>
             <div class="searchButton" href="#">
