--- a/merci.html
+++ b/merci.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/contact.css">
     <link rel="stylesheet" type="text/css" href="/header.css">
     <link rel="stylesheet" type="text/css" href="/footer.css">
+    <link rel="icon" type="image/png" href="/logo.png" />
 </head>
 <body>
     <header>
@@ -19,7 +20,7 @@
         </div>
     </header>
     <div>
-        <a href="/groupie-tracker">
+        <a class="merci" href="/groupie-tracker">
             <h1>Merci pour votre réponse</h1>
         </a>
     </div>
