--- a/artists.html
+++ b/artists.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" type="text/css" href="/artists.css">
     <link rel="stylesheet" type="text/css" href="/header.css">
     <link rel="stylesheet" type="text/css" href="/footer.css">
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/logo.png" />
 </head>
 <body>
     <header>
         <div id="divLogo">
             <a href="/groupie-tracker">
                 <img id="logoImage" src="/logo.png">
+            </a>
+            <a href="/groupie-tracker/contact.html">
+                <img id="mailImage" src="/mail.png">
             </a>
         </div>
     </header>
