--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/contact.css">
     <link rel="stylesheet" type="text/css" href="/header.css">
     <link rel="stylesheet" type="text/css" href="/footer.css">
+    <link rel="icon" type="image/png" href="/logo.png" />
 </head>
 <body>
     <header>
